# idc-backend

./: .gitignore  Dockerfile  Makefile  README.md  model.h5  pyproject.toml  requirements.txt  setup.py
.dvc/: config
app/: fast.py  stream.py
data/: X.npy.dvc  Y.npy.dvc
idc/: gradcam.py  image_processing.py  processing.py  report.py
models/: .gitignore  model2.h5  model3.h5  model5.h5  modelV2.dvc  model_V1.h5.dvc  model_final1.h5
notebooks/: GradCam-opacity-colormap.ipynb  GradCam.ipynb  NY_idc.ipynb  elizabeth_idc.ipynb  elizabeth_idc_2.ipynb  final_models.ipynb  grad_cam_multiple_img.ipynb  idc.ipynb  jkclaar-GradCam.ipynb  model.h5  patch_extraction.ipynb
scripts/: image_processing.py
