[tool.poetry]
name = "idc-backend"
version = "0.1.0"
description = "Dependencies for IDC project"
authors = ["Elizabeth Oda"]
readme = "README.md"
packages = [{include = "idc_backend"}]

[tool.poetry.dependencies]
python = "3.10.6"
tensorflow = "^2.10.0"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
pillow = "^9.2.0"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
black = "^22.10.0"
pylint = "^2.15.5"
isort = "^5.10.1"
dvc = "^2.31.0"
dvc-gdrive = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
